# textnoisr

./: .gitignore  .pre-commit-config.yaml  .python-version  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build-doc.yml  code-style.yml  nightly-test.yml  unit-test.yml
api/: index.html
docs/: api.md  how_this_works.md  index.md  results.md  swap_unbiasing.md  tutorial.md
how_this_works/: index.html
results/: index.html
scripts/: generate_figures.py  natural_calibration.py
search/: search_index.json
styles/: textnoisr.dark.style  textnoisr.light.style
swap_unbiasing/: index.html
tests/textnoisr/: test_noise.py  test_noise_dataset.py
textnoisr/: noise.py  noise_dataset.py  noise_unbiasing.py
tutorial/: index.html
